[gd_scene load_steps=3 format=3 uid="uid://brmc65v1ncifu"]

[ext_resource type="Texture2D" uid="uid://r2njkb2ffao2" path="res://Assets/UI/chickenskewer.png" id="1_t3h4t"]
[ext_resource type="Script" path="res://Scripts/food_item.gd" id="2_whi4v"]

[node name="Icon" type="TextureRect"]
texture = ExtResource("1_t3h4t")
script = ExtResource("2_whi4v")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
